k8s_manifests/ingress-controller-traefik/traefik-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: traefik
spec:
  selector:
    k8s-app: traefik-ingress
  ports:
    - name: web
      port: 80
      targetPort: 8080
