k8s_manifests/ingress-controller-traefik/traefik-ui/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: raca-traefik.ballab.com
      http:
        paths:
          - backend:
              serviceName: traefik-web-ui
              servicePort: 80
  tls:
    - secretName: traefik-ui-tls-cert
